--- a/active_semester/src/HAX605X_Groupes-et-Anneaux-II/assets/module_header.tex
+++ b/active_semester/src/HAX605X_Groupes-et-Anneaux-II/assets/module_header.tex
@@ -41,11 +41,13 @@
 
 \theoremstyle{nonum}
 \mytheorem{interp}{Interprétation}{verdant}{}{}
-\mytheorem{proposition}{Proposition}{verdant}{}{}
+\mytheorem{proposition}{Proposition}{astral}{}{}
 \mytheorem{notation}{Notation}{verdant}{}{}
 \mytheorem{example}{Exemple}{matrix-mist}{}{}
 \mytheorem{exo}{Exercice}{matrix-mist}{}{}
 \mytheorem{theorem}{Théorème}{astral}{}{}
 \mytheorem{remark}{Remarque}{verdant}{}{}
+\mytheorem{lemma}{Lemme}{astral}{}{}
+\mytheorem{corollary}{Corollaire}{astral}{}{}
 
 \makeatother
