--- a/active_semester/src/HAX605X_Groupes-et-Anneaux-II/assets/module_header.tex
+++ b/active_semester/src/HAX605X_Groupes-et-Anneaux-II/assets/module_header.tex
@@ -21,6 +21,7 @@
 \newcommand{\cvdn}{\underset{n\to\infty}{\cvd}}
 \newcommand{\cvlaw}{{\overset{(\mathscr{L})}{\longrightarrow}}}
 \newcommand{\cvlawn}{\underset{n\to\infty}{\cvlaw}}
+\newcommand{\zentrum}{\mathsf{Z}}
 \newcommand{\iid}{\text{i.i.d.}}
 
 
