--- a/active_semester/src/HAX605X_Groupes-et-Anneaux-II/tds/td_main.tex
+++ b/active_semester/src/HAX605X_Groupes-et-Anneaux-II/tds/td_main.tex
@@ -16,11 +16,11 @@
     \tableofcontents
     
     \newpage
-    \section*{TD1 --- qqch}\label{sec:TD1}
+    \section*{TD1 --- temp, rajouter contenu precedent}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
-    \input{../tds/td_1.tex}
+    \input{../tds/td_1_bis.tex}
 
 
 \end{document}
