--- a/active_semester/src/HAX606X_Optimisation_Convexe/assets/module_header.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/assets/module_header.tex
@@ -32,6 +32,7 @@
 \newcommand{\act}{\lcirclearrowright} % Action symbol
 \DeclareMathOperator{\stab}{\mathsf{st}} % Stabilizer
 \DeclareMathOperator{\po}{\mathsf{o}} % Small o notation
+\DeclareMathOperator{\spect}{\mathsf{Sp}} % Spectrum
 
 
 %--------------------------------------------------------------------------------
