--- a/active_semester/src/HAX606X_Optimisation_Convexe/tds/td_main.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/tds/td_main.tex
@@ -22,5 +22,12 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
+    \newpage
+    \section*{TD2 --- Optimisation sans contraintes}\label{sec:TD2}
+    \addcontentsline{toc}{section}{\nameref{sec:TD2}}
+    \setcounter{section}{2}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_2.tex}
+
 
 \end{document}
