avancement tp1 sous forme de jupyter notebook

--- a/active_semester/src/HAX606X_Optimisation_Convexe/tps/tp_1.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/tps/tp_1.tex
@@ -69,7 +69,7 @@
 \iftoggle{showsolutions}{
     \begin{td-sol}\,
         \begin{enumerate}
-            \item Pour appliquer la méthode de Newton, il faut que \(f\) soit de classe \(\cc^2\) sur \(\ff{a,b}\).
+            \item Pour appliquer la méthode de Newton, il faut que \(f\) soit de classe \(\mathcal{C}^2\) sur \(\ff{a,b}\).
             L'itéré de Newton est alors donné par
             \begin{equation*}
                 x_{k+1} = x_k - \frac{f'(x_k)}{f''(x_k)}.
