--- a/active_semester/src/HAX606X_Optimisation_Convexe/tps/tp_main.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/tps/tp_main.tex
@@ -20,5 +20,5 @@
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
-    \input{../tds/tp_1.tex}
+    \input{../tps/tp_1.tex}
 \end{document}
